src/parser/Fun.java
/* Fun.java */
/* Generated By:JavaCC: Do not edit this line. Fun.java */
package parser;
import java.io.*;

public class Fun implements FunConstants {
  final static String Version ="X++ Compiler - version 1.0 - 2018\u005cn";
  boolean menosShort = false;

  public static void main(String args []) throws ParseException {
        String filename ="";
    Fun parser;
    int i;
    boolean ms = false;

        System.out.println(Version);
        // le os parametros passados para o compilador
        for (i = 0; i<args.length - 1; i++) {
          if (args[i].toLowerCase().equals("-short"))
          ms = true;
          else {
            System.out.println("Usase is: java Fun [-short] inputfile");
            System.exit(0);
          }

        }

        if(args[i].equals("-")) {
          // le a entrada - padrao
          System.out.println("Reading standart input...");
          parser = new Fun(System.in);
        }
        else {
          // le o arquivo
          filename = args[args.length-1];
          System.out.println("Reading from file " + filename + "...");
          try {
            parser = new Fun(new java.io.FileInputStream(filename));
          }
          catch (java.io.FileNotFoundException e) {
            System.out.println("File " + filename + " not found.");
            return;
          }
        }


        parser.menosShort = ms;
        parser.program(); //chama o metodo que faz a analise

        // verifica se houve erro lexico
        if (parser.token_source.foundLexError() != 0) {
          System.out.println(parser.token_source.foundLexError() + " lexical errors found");
        }
        else {
          System.out.println("Program successfully analized");
        } // main
}
  public static String im (int x) {
    int k;
    String s;
    s = tokenImage[x];
    k = s.lastIndexOf("\u005c"");
    try { s = s.substring(1,k); }
    catch (StringIndexOutOfBoundsException e)
    { }
    return s;
  }

  final public void paramlist() throws ParseException {
    trace_call("paramlist");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case STRING:
      case FLOAT:
      case CHAR:
      case BOOLEAN:
      case IDENT:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:{
          jj_consume_token(INT);
          break;
          }
        case STRING:{
          jj_consume_token(STRING);
          break;
          }
        case CHAR:{
          jj_consume_token(CHAR);
          break;
          }
        case BOOLEAN:{
          jj_consume_token(BOOLEAN);
          break;
          }
        case FLOAT:{
          jj_consume_token(FLOAT);
          break;
          }
        case IDENT:{
          jj_consume_token(IDENT);
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(IDENT);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ;
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:{
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case NEW:{
            alocexpression();
            break;
            }
          case PLUS:
          case MINUS:
          case NOT:
          case LPAREN:
          case int_constant:
          case string_constant:
          case char_constant:
          case float_constant:
          case boolean_constant:
          case null_constant:
          case IDENT:{
            expression();
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_2;
          }
          jj_consume_token(COMMA);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:{
            jj_consume_token(INT);
            break;
            }
          case STRING:{
            jj_consume_token(STRING);
            break;
            }
          case CHAR:{
            jj_consume_token(CHAR);
            break;
            }
          case BOOLEAN:{
            jj_consume_token(BOOLEAN);
            break;
            }
          case FLOAT:{
            jj_consume_token(FLOAT);
            break;
            }
          case IDENT:{
            jj_consume_token(IDENT);
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(IDENT);
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LBRACKET:{
              ;
              break;
              }
            default:
              jj_la1[6] = jj_gen;
              break label_3;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ASSIGN:{
            jj_consume_token(ASSIGN);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case NEW:{
              alocexpression();
              break;
              }
            case PLUS:
            case MINUS:
            case NOT:
            case LPAREN:
            case int_constant:
            case string_constant:
            case char_constant:
            case float_constant:
            case boolean_constant:
            case null_constant:
            case IDENT:{
              expression();
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            ;
          }
        }
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } finally {
      trace_return("paramlist");
    }
  }

  final public void vardecl() throws ParseException {
    trace_call("vardecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case STRING:{
        jj_consume_token(STRING);
        break;
        }
      case CHAR:{
        jj_consume_token(CHAR);
        break;
        }
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
        break;
        }
      case FLOAT:{
        jj_consume_token(FLOAT);
        break;
        }
      case IDENT:{
        jj_consume_token(IDENT);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(IDENT);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_4;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        jj_consume_token(IDENT);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ;
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            break label_6;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        jj_consume_token(ASSIGN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:{
          alocexpression();
          break;
          }
        case PLUS:
        case MINUS:
        case NOT:
        case LPAREN:
        case int_constant:
        case string_constant:
        case char_constant:
        case float_constant:
        case boolean_constant:
        case null_constant:
        case IDENT:{
          expression();
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } finally {
      trace_return("vardecl");
    }
  }

  final public void factor() throws ParseException {
    trace_call("factor");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_constant:{
        jj_consume_token(int_constant);
        break;
        }
      case string_constant:{
        jj_consume_token(string_constant);
        break;
        }
      case char_constant:{
        jj_consume_token(char_constant);
        break;
        }
      case null_constant:{
        jj_consume_token(null_constant);
        break;
        }
      case boolean_constant:{
        jj_consume_token(boolean_constant);
        break;
        }
      case float_constant:{
        jj_consume_token(float_constant);
        break;
        }
      case IDENT:{
        lvalue();
        break;
        }
      case LPAREN:{
        jj_consume_token(LPAREN);
        expression();
        jj_consume_token(RPAREN);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("factor");
    }
  }

  final public void unaryexpr() throws ParseException {
    trace_call("unaryexpr");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NOT:{
        jj_consume_token(NOT);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:{
          jj_consume_token(PLUS);
          break;
          }
        case MINUS:{
          jj_consume_token(MINUS);
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      factor();
    } finally {
      trace_return("unaryexpr");
    }
  }

  final public void term() throws ParseException {
    trace_call("term");
    try {
      unaryexpr();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MULTIPLY:
        case DIVIDE:
        case REM:{
          ;
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MULTIPLY:{
          jj_consume_token(MULTIPLY);
          break;
          }
        case DIVIDE:{
          jj_consume_token(DIVIDE);
          break;
          }
        case REM:{
          jj_consume_token(REM);
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        unaryexpr();
      }
    } finally {
      trace_return("term");
    }
  }

  final public void numexpr() throws ParseException {
    trace_call("numexpr");
    try {
      term();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:{
          ;
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:{
          jj_consume_token(PLUS);
          break;
          }
        case MINUS:{
          jj_consume_token(MINUS);
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        term();
      }
    } finally {
      trace_return("numexpr");
    }
  }

  final public void equalityExpression() throws ParseException {
    trace_call("equalityExpression");
    try {
      numexpr();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case GT:
        case LT:
        case EQ:
        case LE:
        case GE:
        case NEQ:{
          ;
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          break label_9;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LT:{
          jj_consume_token(LT);
          break;
          }
        case GT:{
          jj_consume_token(GT);
          break;
          }
        case LE:{
          jj_consume_token(LE);
          break;
          }
        case GE:{
          jj_consume_token(GE);
          break;
          }
        case EQ:{
          jj_consume_token(EQ);
          break;
          }
        case NEQ:{
          jj_consume_token(NEQ);
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        numexpr();
      }
    } finally {
      trace_return("equalityExpression");
    }
  }

  final public void condANDexpression() throws ParseException {
    trace_call("condANDexpression");
    try {
      equalityExpression();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case AND:{
          ;
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          break label_10;
        }
        jj_consume_token(AND);
        equalityExpression();
      }
    } finally {
      trace_return("condANDexpression");
    }
  }

  final public void condORexpression() throws ParseException {
    trace_call("condORexpression");
    try {
      condANDexpression();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case XOR:
        case OR:{
          ;
          break;
          }
        default:
          jj_la1[27] = jj_gen;
          break label_11;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OR:{
          jj_consume_token(OR);
          break;
          }
        case XOR:{
          jj_consume_token(XOR);
          break;
          }
        default:
          jj_la1[28] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        condANDexpression();
      }
    } finally {
      trace_return("condORexpression");
    }
  }

  final public void expression() throws ParseException {
    trace_call("expression");
    try {
      condORexpression();
    } finally {
      trace_return("expression");
    }
  }
